# AICloud-Storage

./: .gitignore  README.md  python_apis.md
architecture/: HTTP Message.md  Security Interface.md  Storage Service Message.md  Workers Pool Interface.md
architecture/state_machines/: tmp.md
src/auth_server/src/rgw/: CMakeLists.txt  rgw_auth_registry.h  rgw_main.cc  rgw_process.cc  rgw_rest.cc  rgw_rest.h
src/auth_server/src/rgw/singstorage/: rgw_rest_sing.cc  rgw_rest_sing.h  rgw_sing_auth.cc  rgw_sing_auth.h  rgw_sing_error_code.h
src/client_lib/src/: CMakeLists.txt  SysSignalHandler.h  rados_client.cpp
src/client_lib/src/cluster/: CMakeLists.txt
src/client_lib/src/cluster/include/cluster/: .RemoteProtocol.h.swp  Authentication.h  CephContext.h  FutureRemote.h  RemoteProtocol.h  Worker.h  WorkerPool.h
src/client_lib/src/cluster/src/: CephContext.cpp  DataObj.cpp  DataObj.h  DataObject.cpp  DataObject.h  JSONHandler.cpp  JSONHandler.h  JSONRemoteProtocol.cpp  JSONRemoteProtocol.h  RemoteProtocol.cpp  StoreObj.cpp  StoreObj.h  StoreWorker.cpp  StoreWorker.h  Worker.cpp  WorkerPool.cpp
src/client_lib/src/cmake/Modules/: FindCephRados.cmake  FindFacebookFolly.cmake  FindGlog.cmake
src/client_lib/src/include/: CMakeLists.txt  CommonCode.h  ConcurrentQueue.h  JSONHandler.cpp  JSONHandler.h  Task.h
src/client_lib/src/ipc/: CMakeLists.txt
src/client_lib/src/ipc/include/ipc/: IPCContext.h  IPCServer.h
src/client_lib/src/ipc/include/ipc/lib/callback/: ClientConnectionCallback.h  RequestContext.h  ServerAcceptCallback.cpp  ServerReadCallback.cpp  ServerReadCallback.h  ServerWriteCallback.cpp
src/client_lib/src/ipc/include/ipc/lib/message/: IPCCloseMessage.h  IPCReadRequestMessage.h  IPCStatusMessage.h  IPCWriteRequestMessage.h
src/client_lib/src/ipc/include/ipc/lib/utils/: BFCAllocator.cpp  BFCAllocator.h  ParseArg.h
src/client_lib/src/ipc/src/: IPCServer.cpp  SysSignalHandler.h
src/client_lib/src/ipc/src/lib/callback/: RequestContext.h  ServerAcceptCallback.cpp  ServerAcceptCallback.h  ServerReadCallback.cpp  ServerReadCallback.h
src/client_lib/src/ipc/src/lib/message/: IPCAuthenticationMessage.h  IPCMessage.h  IPCStatusMessage.h
src/client_lib/src/remote/: CMakeLists.txt
src/client_lib/src/remote/include/remote/: Authentication.h  Cache.h  ChannelContext.h  Message.h  Receiver.h  SecureKey.h  Security.h  SecuritySocket.h  Sender.h  ServerChannel.h
src/client_lib/src/remote/src/: Message.cpp  Receiver.cpp  Receiver.h  Security.cpp  SecurityModule.cpp  SecurityModule.h  SecuritySocket.cpp  Sender.cpp  ServerChannel.cpp
src/cpp_packages/: Callback.cpp  IPCContext.h  IPCServer.cpp  IPCServer.h  Makefile  SysSignalHandler.h  compile_folly.sh  main.cpp  test.cpp  test1_client.cpp  test2.cpp
src/cpp_packages/lib/: Callback.h  IPCContext.h  IPCMessage.h  IPCServer.h  IPCSocketPoolContext.h  ParseArg.h
src/cpp_packages/lib/callback/: ClientConnectionCallback.h  RequestContext.h  ServerAcceptCallback.cpp  ServerAcceptCallback.h  ServerReadCallback.cpp  ServerReadCallback.h  ServerWriteCallback.cpp
src/cpp_packages/lib/message/: IPCAuthenticationMessage.h  IPCCloseMessage.h  IPCConnectionReplyMessage.h  IPCDeleteRequestMessage.cpp  IPCDeleteRequestMessage.h  IPCMessage.h  IPCReadRequestMessage.h  IPCStatusMessage.h  IPCWriteRequestMessage.h  Task.h
src/cpp_packages/lib/utils/: Hash.h
src/cpp_packages/test/: compile_folly.sh  test1_client.cpp  test1_server.cpp  test2  test2.cpp  test3.cpp
src/cpp_packages2/: Auth.proto  Authentication.h  CephContext.cpp  ChannelContext.h  ConcurrentQueue.h  Message.cpp  Message.h  Queue.h  Receiver.cpp  Receiver.h  Security.h  Sender.cpp  Sender.h  ServerChannel.cpp  ServerChannel.h  StoreObj.cpp  StoreObj.h  StoreWorker.cpp  StoreWorker.h  Task.h  Worker.h  ceph_context.cpp  ceph_context.h  concurrent_queue.h  store_obj.cpp  store_obj.h  store_worker.cpp  store_worker.h  task.h  worker.h
src/python_packages/singstorage/: .gitignore  Makefile  Python APIs.md  main.py  requirements.txt  setup.py
src/python_packages/singstorage/singstorage/: MANIFEST.in  __init__.py  io_ops.py  ipc.py  messages.py  rados.py  requirements.txt  singexcept.py  usercontext.py
src/python_packages/singstorage/singstorage/internal/: ipc.py  newcontext.py
src/python_packages/singstorage/singstorage/internal/utils/: create.py
src/python_packages/singstorage/singstorage/singstorage/: ipc.py
src/python_packages/singstorage/singstorage/singstorage/utils/: encoding.py
src/python_packages/singstorage/singstorage/utils/: __init__.py  compression.py  encoding.py  hash.py  logging.py  unique_int_generator.py
src/python_packages/singstorage/test/: clientSimulator.py  context.py  simple_io_test.py  test_connect.py
tests/client_lib/: CMakeLists.txt  rados_client.cpp
tests/client_lib/cluster/include/cluster/: CephContext.h  RemoteProtocol.h  Worker.h
tests/client_lib/cluster/src/: RemoteProtocol.cpp  StoreWorker.cpp  StoreWorker.h  Worker.cpp
tests/client_lib/cmake/Modules/: FindCephRados.cmake
tests/client_lib/include/: CMakeLists.txt  ConcurrentQueue.h  Disruptor.h  Task.h
tests/client_lib/ipc/include/ipc/: IPCContext.h  IPCServer.h
tests/client_lib/ipc/include/ipc/lib/callback/: ClientConnectionCallback.h  RequestContext.h  ServerAcceptCallback.h  ServerReadCallback.h  ServerWriteCallback.h
tests/client_lib/ipc/include/ipc/lib/message/: IPCConnectionReplyMessage.h  (+3 more)
tests/client_lib/ipc/src/lib/callback/: ServerWriteCallback.cpp
tests/client_lib/ipc/src/lib/utils/: BFCAllocator.cpp
tests/client_lib/remote/: CMakeLists.txt
tests/client_lib/remote/include/remote/: ChannelContext.h  Message.h  Sender.h  ServerChannel.h
tests/client_lib/remote/src/: Message.cpp  Receiver.cpp  Security.cpp  SecurityModule.cpp  Sender.cpp  ServerChannel.cpp
tests/config_files/: ceph.conf  config_file
tests/pyGenerator/: clientSimulator.py  file.txt  log  pip-selfcheck.json  simpleTest.py  workloadGen.py
tests/pyGenerator/local/: bin  include  lib  pip-selfcheck.json
tests/testScripts/: clientSimulator.py  file.txt  workloadGen.py
